Fix crashed; refactor